# expr-engine

./: README.md  pyproject.toml
examples/: calculator.py
src/expr_engine/: __init__.py  cli.py  differentiate.py  evaluate.py  parser.py  pretty.py  simplify.py  types.py  utils.py
src/expr_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py  test_evaluate.py  test_parser.py  test_simplify.py
